# pico-clock

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  openocd-rp2040.cfg
src/: application-config.h  freertos_hooks.c  lwipopts.h  main.c  sntp.c  sntp.h  time_utils.c  time_utils.h  types.h  wifi.c  wifi.h
src/logging/: logging.c  logging.h  logging_api.h
src/utz/: utz.c  utz.h  zones.c  zones.h
